# certificate_check

./: 01_try_certifi.ipynb  02_example_for_requests.ipynb  03_following_medium_article.ipynb  03b_plain_python.py  README.md  pyproject.toml
