[tool.poetry]
name = "certificate-check"
version = "0.1.0"
description = ""
authors = ["Ambrus Both <ambrus.both@kiongroup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
certifi = "^2025.1.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
