[tool.poetry]
name = "certificate-check"
version = "0.1.0"
description = ""
authors = ["Ambrus Both <ambrus.both@kiongroup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
certifi = "^2025.1.31"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
